finalisation de de projet

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,13 @@ services:
       - postgres
     ports:
       - "8501:8501"
+  adminer:
+      image: adminer
+      restart: always
+      ports:
+       - "8081:8080"
+      depends_on:
+        - postgres
 
 volumes:
   pgdata:
